@@ -17,11 +17,7 @@
 // Format lists
 //
 
-#if defined(UNICODE)
 static WORD SysFormatList[] = {CF_UNICODETEXT, CF_TEXT, NULL};
-#else
-static WORD SysFormatList[] = {CF_TEXT, NULL};
-#endif
 
 //
 // Structure used to hold a clipboard id and its text name
@@ -458,11 +454,7 @@ BOOL CDDEConv::AdviseData(UINT wFmt, const TCHAR *pszTopic, const TCHAR *pszItem
 
 BOOL CDDEConv::Request(const TCHAR *pszItem, CString &ret)
 {
-#if defined(UNICODE)
     return Request(CF_UNICODETEXT, pszItem, ret) || Request(CF_TEXT, pszItem, ret);
-#else
-    return Request(CF_TEXT, pszItem, ret);
-#endif
 }
 
 BOOL CDDEConv::Request(UINT wFmt, const TCHAR *pszItem, CString &ret)
@@ -484,7 +476,6 @@ BOOL CDDEConv::Request(UINT wFmt, const TCHAR *pszItem, CString &ret)
     BYTE *pData = ::DdeAccessData(hData, &dwSize);
     DWORD nChars = (dwSize / sizeof(TCHAR)) - 1;
 
-#if defined(UNICODE)
     if(wFmt == CF_TEXT) {
         nChars = (dwSize / sizeof(CHAR)) - 1;
         ret = CString((CHAR*)pData, nChars);
@@ -492,9 +483,6 @@ BOOL CDDEConv::Request(UINT wFmt, const TCHAR *pszItem, CString &ret)
     else {
         ret = CString((TCHAR *)pData, nChars);
     }
-#else
-    ret = CString((TCHAR *)pData, nChars);
-#endif
     ::DdeUnaccessData(hData);
     // MSDN sez 'When an application has finished using the data handle
     // returned by DdeClientTransaction, the application should free the
